# homography-fitting

./: .gitignore  .pre-commit-config.yaml  EXPERIMENT_GUIDE.md  MIGRATION.md  README.md  banner_segment.py  pyproject.toml
analysis/: experiment_comparison.md  overnight_quality_report.md  perf_report.md  report.md
archive/: banner_segment.py  court_homography.py  find_diff_region.py  martina_sam2_boards.py  region_overlay.py  test_fit.py  video_masker.py
configs/: default.yaml  sam3_court_eval.yaml  sam3_default.yaml
configs/experiments/: base_pipeline.yaml  court_floor_redbull.yaml  eval_original.yaml  eval_original_rvm.yaml  eval_original_v2.yaml  eval_original_v3.yaml  eval_original_v5.yaml  eval_walkover.yaml  eval_walkover_aggressive_occ.yaml  eval_walkover_banner.yaml  eval_walkover_banner_v2.yaml  eval_walkover_banner_v3.yaml  eval_walkover_banner_v4.yaml  eval_walkover_blur.yaml  eval_walkover_canvas_mrcnn.yaml  eval_walkover_clean_matanyone.yaml  eval_walkover_clean_plate.yaml  eval_walkover_colorfill.yaml  eval_walkover_rvm.yaml  (+32 more)
docs/: evaluation-protocol.md
scripts/: benchmark_fps.py  collect_prompts.py  compare_baselines.py  full_eval.py  generate_experiment_table.py  modal_run.py  perf_summary.py  quality_eval.py  run_experiment.py  run_matrix.sh  run_matrix_parallel.py  run_pipeline.py
tests/: test_alpha_compositor.py  test_court_geometry.py  test_modal_run_routing.py  test_pipeline_prompts.py  test_pipeline_video.py  test_prompt_workflows.py  test_reporting.py  test_sam3_attention.py  test_sam3_loader.py  test_sam3_video.py  test_stabilization.py
(+955 files in other folders)
